# research-os

./: .gitignore  ARCHITECTURE.md  CAPABILITIES.md  README.md  TECHNICAL_REFERENCE.md  USER_GUIDE.md  docker-compose.yml  pyproject.toml  run.sh  setup.py  start_all.sh
data/: debate_cache.json  research.kuzu  research.kuzu.wal  research_v2.kuzu  research_v2.kuzu.wal  test_index.bin.meta.json
data/chroma/: chroma.sqlite3
docs/: INTEGRATIONS.md  MODELS_AND_LIBRARIES.md  RELEASE_NOTES_9.8.md
docs/workflows/: debate_workflow.md  doubt_workflow.md  generation_workflow.md  ingestion_workflow.md  retrieval_workflow.md  serendipity_workflow.md  voice_workflow.md  whispers_workflow.md
jarvis_m4/: __init__.py  main.py
jarvis_m4/services/: __init__.py  calibration.py  causal_graph.py  debate.py  evidence_debate.py  extract.py  graph_backend.py  palace.py  reporter.py  retrieval_engine.py  scene.py  schema.py  search_service.py
research_os/: README.md  __init__.py  benchmark.py  config.py  main.py
research_os/evolution/: engine.py
research_os/export/: __init__.py  (+1 more)
scripts/: create_backup.sh  restore_backup.sh
tests/: benchmark_full_pipeline.py  fix_lock.sh  run_logic_tests.py  test_debate_cache.py  test_extraction_metrics.py  test_graph_engine.py  test_hnsw_retrieval.py  test_palace.py  test_search_service.py  test_server.py  test_two_stage_embedding.py  verify_debate_logic.py  verify_deployment.sh  verify_fastembed.py  verify_foundation.py  verify_ingestion.py  verify_mlx.py  verify_pipeline.py  verify_production_suite.py  verify_reranker.py  verify_spatial.py
(+61 files in other folders)
