[project]
name = "research_os"
version = "0.1.0"
description = "ResearchOS: Frontier - M4 Native Research Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core Inference (Apple Silicon)
    "mlx>=0.19.0",
    "mlx-lm>=0.19.0",
    
    # Knowledge Graph (Embedded C++)
    "kuzudb>=0.6.0",
    
    # Vector Database & Search
    "faiss-cpu>=1.8.0",
    "fastembed>=0.4.0",
    "usearch>=2.11.0",
    
    # High-Performance I/O & Async
    "uvloop>=0.21.0",
    "orjson>=3.10.0",
    "fsspec>=2024.0.0",
    
    # Voice & Audio (Real-time)
    "sounddevice>=0.4.0",
    "numpy>=1.26.0",
    "webrtcvad>=2.0.10",
    
    # Ingestion
    "marker-pdf>=0.2.0",
    "tree-sitter>=0.21.0",
    "trafilatura>=1.9.0",
    "pandas>=2.2.0", 
    "polars>=1.0.0", # Faster alternative
    
    # Cloud Acceleration (Hybrid)
    "groq>=0.9.0",
    
    # Visualization
    "manim>=0.18.0",
    
    # Utilities
    "pydantic>=2.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0"
]

[project.scripts]
research_os = "research_os.main:main"
